--- a/client/app/question/question.dialog/response.config.dialog.html
+++ b/client/app/question/question.dialog/response.config.dialog.html
@@ -22,7 +22,7 @@
                     </md-input-container>
                     <md-input-container flex="10">
                         <label>Units</label>
-                        <input name="units" rows="1" ng-model="step.unit">
+                        <input name="units" rows="1" ng-model="i18n[langId][step.unit]">
                         <div class="input-message hint" ng-if="!responseForm.units.$dirty">Units</div>
                     </md-input-container>
                     <md-input-container flex="20">
