--- a/client/app/question/question.dialog/question.dialog.html
+++ b/client/app/question/question.dialog/question.dialog.html
@@ -27,7 +27,7 @@
           </md-input-container>
           <md-input-container flex="10">
             <label>Grade</label>
-            <md-select name="grade" ng-model="item.grade" required>
+            <md-select multiple=true name="grade" ng-model="item.grade" required>
               <md-option ng-value="g" ng-repeat="g in meta.grades">{{g}}</md-option>
             </md-select>
             <div class="input-message hint" ng-if="!questionForm.grade.$dirty">Grade</div>
