added mdd template in client, added mdd model in server mongoose, added mdd switch case in question controller

--- a/client/index.html
+++ b/client/index.html
@@ -92,6 +92,7 @@
   <script src="app/question/question.controller.js"></script>
   <script src="app/question/question.dialog/question.dialog.controller.js"></script>
   <script src="app/question/question.dialog/response.config.dialog.controller.js"></script>
+  <script src="app/question/question.dialog/options.config.dialog.controller.js"></script>
   <script src="app/question/question.js"></script>
   <script src="components/auth/auth.service.js"></script>
   <script src="components/auth/user.service.js"></script>
