--- a/client/app/question/question.dialog/question.dialog.html
+++ b/client/app/question/question.dialog/question.dialog.html
@@ -172,6 +172,9 @@
         <div id="steps " ng-if="item.qtype=='mdd'">
           <div ng-include src=" 'app/question/question.dialog/mdd.dialog.options.html' "></div>
         </div>
+        <div id="steps " ng-if="item.qtype=='mtf'">
+          <div ng-include src=" 'app/question/question.dialog/mtf.dialog.premise.response.html' "></div>
+        </div>
         <md-divider></md-divider>
         <!-- <div layout="row " ng-if="item.qtype=='legacy-word-problem' ">
                     <md-input-container flex>
