--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -1,76 +1,80 @@
 <div ng-include="'components/shell/shell.html'"></div>
 
 <div class="col-md-12" ng-controller="QuestionCtrl">
-    <md-content>
-        <!--<md-tabs md-dynamic-height md-border-bottom>
+  <md-content>
+    <!--<md-tabs md-dynamic-height md-border-bottom>
             <md-tab label="All Items">-->
-        <md-content class="">
-            <md-toolbar md-scroll-shrink>
-                <div class="md-toolbar-tools">
-                    <h3>
-                        <span>{{showMyItems ? 'My Items' : 'All Items'}}</span>
-                    </h3>
-                    <md-menu md-offset="0 5">
-                        <md-button class="md-icon-button" aria-label="Menu" ng-click="$mdMenu.open($event)">
-                            <md-icon md-svg-icon="hardware:keyboard_arrow_down"></md-icon>
-                        </md-button>
-                        <md-menu-content width="4">
-                            <md-menu-item>
-                                <md-button ng-click="filterItems(false)">
-                                    <md-icon md-svg-icon="social:group" md-menu-align-target></md-icon>
-                                    All Items
-                                </md-button>
-                            </md-menu-item>
-                            <md-menu-item>
-                                <md-button ng-click="filterItems(true)">
-                                    <md-icon md-svg-icon="action:favorite"></md-icon>
-                                    My Items
-                                </md-button>
-                            </md-menu-item>
-                        </md-menu-content>
-                    </md-menu>
-                    <span flex></span>
-                    <input class="search-box" ng-model="search.qId" placeholder="Search by Question Id" ng-enter="openItemById($event, search.qId)"
-                        ng-change="filterItems(showMyItems)">
-                    <md-select name="env" ng-model="env" required>
-                        <md-option ng-value="e" ng-repeat="e in envs">{{e.name}}</md-option>
-                    </md-select>
-                    <md-button ng-click="publishSelected()">
-                        <md-icon md-svg-icon="editor:publish"></md-icon>
-                        Publish Selected
-                    </md-button>
-                </div>
-            </md-toolbar>
-            <md-list md-virtual-repeat-container class="questions-list" style="height:500px;" ng-cloak>
-                <md-list-item class="md-2-line" md-virtual-repeat="item in vm.items" ng-click="openItem($event, item)" md-on-demand>
-                    <md-checkbox class="" ng-checked="isSelected(item)" ng-click="toggleSelection(item)"></md-checkbox>
-                    <h3 class="question-id">{{ item.identifier }}</h3>
-                    <div class="md-list-item-text" layout="column">
-                        <h4>
-                            <span>Created: {{item.owner}} </span> |
-                            <span>Updated: {{getDisplayableTime(item.updated.when)}} by {{item.updated.by}}</span> |
-                            <span><b>{{item.state}}</b></span> |
-                            <span>{{item.qtype}}</span>
-                        </h4>
-                        <!-- <p ng-if="item.qtype=='legacy-word-problem'">
+    <md-content class="">
+      <md-toolbar md-scroll-shrink>
+        <div class="md-toolbar-tools">
+          <h3>
+            <span>{{showMyItems ? 'My Items' : 'All Items'}}</span>
+          </h3>
+          <md-menu md-offset="0 5">
+            <md-button class="md-icon-button" aria-label="Menu" ng-click="$mdMenu.open($event)">
+              <md-icon md-svg-icon="hardware:keyboard_arrow_down"></md-icon>
+            </md-button>
+            <md-menu-content width="4">
+              <md-menu-item>
+                <md-button ng-click="filterItems(false)">
+                  <md-icon md-svg-icon="social:group" md-menu-align-target></md-icon>
+                  All Items
+                </md-button>
+              </md-menu-item>
+              <md-menu-item>
+                <md-button ng-click="filterItems(true)">
+                  <md-icon md-svg-icon="action:favorite"></md-icon>
+                  My Items
+                </md-button>
+              </md-menu-item>
+            </md-menu-content>
+          </md-menu>
+          <md-button ui-sref="wsdetails">To WSdetails</md-button>
+          <span flex></span>
+          <input class="search-box" ng-model="search.qId" placeholder="Search by Question Id" ng-enter="openItemById($event, search.qId)"
+            ng-change="filterItems(showMyItems)">
+          <md-select name="env" ng-model="env" required>
+            <md-option ng-value="e" ng-repeat="e in envs">{{e.name}}</md-option>
+          </md-select>
+          <md-button ng-click="publishSelected()">
+            <md-icon md-svg-icon="editor:publish"></md-icon>
+            Publish Selected
+          </md-button>
+        </div>
+      </md-toolbar>
+      <md-list md-virtual-repeat-container class="questions-list" style="height:500px;" ng-cloak>
+        <md-list-item class="md-2-line" md-virtual-repeat="item in vm.items" ng-click="openItem($event, item)" md-on-demand>
+          <md-checkbox class="" ng-checked="isSelected(item)" ng-click="toggleSelection(item)"></md-checkbox>
+          <h3 class="question-id">{{ item.identifier }}</h3>
+          <div class="md-list-item-text" layout="column">
+            <h4>
+              <span>Created: {{item.owner}} </span> |
+              <span>Updated: {{getDisplayableTime(item.updated.when)}} by {{item.updated.by}}</span> |
+              <span>
+                <b>{{item.state}}</b>
+              </span> |
+              <span>{{item.qtype}}</span>
+            </h4>
+            <!-- <p ng-if="item.qtype=='legacy-word-problem'">
                             {{ item.questionText | limitTo:100 }} <span ng-if="item.questionText.length > 100">...</span>
                         </p> -->
-                        <p>
-                            {{ item.i18n[langId][item.questionText] | limitTo:100 }} <span ng-if="item.questionText.length > 100">...</span>
-                        </p>
-                    </div>
-                    <md-icon class="md-secondary" ng-click="copyItem($event, item)" aria-label="Copy" md-svg-icon="content:content_copy"></md-icon>
-                    <md-icon class="md-secondary" ng-click="openItem($event, item)" aria-label="Edit" md-svg-icon="editor:mode_edit"></md-icon>
-                    <md-icon class="md-secondary" ng-click="archiveItem($event, item)" aria-label="Archive" md-svg-icon="action:delete"></md-icon>
-                    <md-icon class="md-secondary" ng-click="publishItem($event, item)" aria-label="Publish" md-svg-icon="editor:publish"></md-icon>
-                </md-list-item>
-                <md-divider></md-divider>
-            </md-list>
-        </md-content>
-        <!--</md-tab>
-        </md-tabs>-->
+            <p>
+              {{ item.i18n[langId][item.questionText] | limitTo:100 }}
+              <span ng-if="item.questionText.length > 100">...</span>
+            </p>
+          </div>
+          <md-icon class="md-secondary" ng-click="copyItem($event, item)" aria-label="Copy" md-svg-icon="content:content_copy"></md-icon>
+          <md-icon class="md-secondary" ng-click="openItem($event, item)" aria-label="Edit" md-svg-icon="editor:mode_edit"></md-icon>
+          <md-icon class="md-secondary" ng-click="archiveItem($event, item)" aria-label="Archive" md-svg-icon="action:delete"></md-icon>
+          <md-icon class="md-secondary" ng-click="publishItem($event, item)" aria-label="Publish" md-svg-icon="editor:publish"></md-icon>
+        </md-list-item>
+        <md-divider></md-divider>
+      </md-list>
     </md-content>
-    <md-button class="md-fab md-icon-button md-accent" aria-label="Add new" ng-click="openItem($event)" style="position:absolute; bottom:10px;right:10px;">
-        <md-icon md-svg-icon="content:add"></md-icon>
-    </md-button>
+    <!--</md-tab>
+        </md-tabs>-->
+  </md-content>
+  <md-button class="md-fab md-icon-button md-accent" aria-label="Add new" ng-click="openItem($event)" style="position:absolute; bottom:10px;right:10px;">
+    <md-icon md-svg-icon="content:add"></md-icon>
+  </md-button>
 </div>
