--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="app/app.css">
   <link rel="stylesheet" href="app/main/main.css">
   <link rel="stylesheet" href="app/question/question.css">
+  <link rel="stylesheet" href="app/wsd/wsd.css">
   <!-- endinjector -->
   <!-- endbuild -->
   <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">-->
@@ -44,14 +45,20 @@
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
   <script>
     (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function () {
         (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-XXXXX-X');
     ga('send', 'pageview');
+
   </script>
 
   <!--[if lt IE 9]>
@@ -90,10 +97,11 @@
   <script src="app/main/main.controller.js"></script>
   <script src="app/main/main.js"></script>
   <script src="app/question/question.controller.js"></script>
+  <script src="app/question/question.dialog/options.config.dialog.controller.js"></script>
   <script src="app/question/question.dialog/question.dialog.controller.js"></script>
   <script src="app/question/question.dialog/response.config.dialog.controller.js"></script>
-  <script src="app/question/question.dialog/options.config.dialog.controller.js"></script>
   <script src="app/question/question.js"></script>
+  <script src="app/wsd/controller.js"></script>
   <script src="components/auth/auth.service.js"></script>
   <script src="components/auth/user.service.js"></script>
   <script src="components/mongoose-error/mongoose-error.directive.js"></script>
