--- a/client/app/wsd/showWorksheetData.html
+++ b/client/app/wsd/showWorksheetData.html
@@ -14,6 +14,10 @@
               <strong> Draft: </strong>{{getCount('Draft')}} |
               <strong> Retired: </strong>{{getCount('Retired')}} |
               <strong> Current List: </strong>{{getCount('Current')}} |
+              <div style="font-size:70%;">
+                |
+                <strong> Last Updated: </strong> {{getDisplayableDate(version,true)}} |
+              </div>
             </div>
             <span flex></span>
             <input type="text" ng-model="searchWS" ng-change="filterList()" placeholder="Search For Worksheet">
@@ -64,8 +68,8 @@
           <div layout="column" flex>
             <div>
               <span>
-                <strong>Created: </strong>{{getDisplayableDate(ws.createdOn)}} |
-                <strong>Updated: </strong>{{getDisplayableDate(ws.lastUpdatedOn)}}
+                <strong>Created: </strong>{{getDisplayableDate(ws.createdOn,false)}} |
+                <strong>Updated: </strong>{{getDisplayableDate(ws.lastUpdatedOn,false)}}
               </span>
             </div>
             <div>
