updates to worksheet dependency module

--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -29,7 +29,7 @@
               </md-menu-item>
             </md-menu-content>
           </md-menu>
-          <!-- <md-button ui-sref="wsdetails">To WSdetails</md-button> -->
+          <md-button ui-sref="wsdetails">To WSdetails</md-button>
           <span flex></span>
           <input class="search-box" ng-model="search.qId" placeholder="Search by Question Id" ng-enter="openItemById($event, search.qId)"
             ng-change="filterItems(showMyItems)">
