--- a/client/app/question/question.dialog/question.dialog.html
+++ b/client/app/question/question.dialog/question.dialog.html
@@ -112,9 +112,14 @@
               <div ng-message="md-require-match">Please select an existing user.</div>
             </div>
           </md-autocomplete>
-          <md-input-container class="md-block" flex="30">
+          <md-input-container class="md-block" flex="20">
             <label>Question Type</label>
             <input required name="qtype" ng-model="item.qtype" ng-disabled="{{true}}">
+          </md-input-container>
+          <md-input-container class="md-block" flex="15">
+            <md-checkbox ng-disabled='{{langId=="en"?"false":"true"}}' ng-model="item.flags.isZoomable" aria-label="ImageZoomable" ng-change="zoomableImg(item.flags.isZoomable)">
+              Images Zoomable
+            </md-checkbox>
           </md-input-container>
         </div>
         <hr />
